--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -157,9 +157,6 @@
   <data name="iconUnlocked_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconUnlocked_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconFilter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="iconGreenBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconGreenBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -175,8 +172,8 @@
   <data name="iconTime" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconTime.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconFastForward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconFastForward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="iconFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconFilter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconRedBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconRedBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -192,6 +189,9 @@
   </data>
   <data name="iconScanNetwork_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconScanNetwork_21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconFastForward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconFastForward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconFilter2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconFilter1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,14 +211,23 @@
   <data name="iconGreenBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconGreenBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconDMXslider" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconDMXslider.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconPurpleBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconPurpleBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconZoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconZoom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconBlueBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconBlueBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconBlackBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconBlackBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconAdd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconAdd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconGreyBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconGreyBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -229,7 +238,7 @@
   <data name="iconGreyBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconGreyBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconDMXslider" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconDMXslider.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="iconDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
